cfn.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. 
  Kittens Carousel Static Website will be deployed on Amazon Linux 2023 EC2 Instance with custom 
  security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website
  is downloaded from my Public Github repository, then deployed on Apache Web Server.

Parameters:
  myKeyPair:
    Description: Choose your keypair
    Type: AWS::EC2::KeyPair::KeyName
    Default: learn1

Resources: 
  
  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-063d43db0594b521b
      InstanceType: t2.micro
      KeyName: !Ref myKeyPair
      SecurityGroupIds: 
        - !Ref mySecGrp
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData: !Base64 |
        #!/bin/bash

        dnf update -y
        dnf install httpd -y
        systemctl start httpd
        systemctl enable httpd
        cd /var/www/html
        FOLDER="https://github.com/aredo01/Static-web-kitten/tree/main/static-web"
        wget ${FOLDER}/index.html
        wget ${FOLDER}/cat0.jpg
        wget ${FOLDER}/cat1.jpg
        wget ${FOLDER}/cat2.jpg
  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "allow ssh and http"
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: "learn1"

Outputs:
  webSiteURL:
    Description: URL of website
    Value: !Sub 
      - http://${publicIP}
      - publicIP: !GetAtt myWebServer.PublicIp
